Coś na kształt wysyłania zaczyna działać (spece od API cały czas to modyfikują, teraz się zaczęło chrzanić), chyba poprawiony problem oddzielnych wywołań HTTP w innych wątkach (przedtem działało albo wysyłanie, albo odbieranie w jednym momencie).

--- a/mobilka/build.properties
+++ b/mobilka/build.properties
@@ -3,4 +3,7 @@ MediaControlSkin=src/Status.java\
 ,src/Uzytkownik.java\
 ,src/Aplikacja_mobilna.java\
 ,src/Polaczenie.java\
+,src/czytaj.to\
+,src/Serializer.php\
+,src/parserURL.class.php\
 
